modify login method with security, WebMvcConfig